--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -5,6 +5,11 @@ authors = []
 telemetry = true
 cache_dir = './.cache'
 requirements = []
+[contracts.reality-nft]
+path = 'contracts/reality-nft.clar'
+clarity_version = 2
+epoch = 2.5
+
 [contracts.reality-parameters]
 path = 'contracts/reality-parameters.clar'
 clarity_version = 2
